--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   internet_connection_checker: ^0.0.1+3
   intl: 0.17.0
   sqflite: 2.0.1
+  get_it:
 
 dev_dependencies:
   flutter_launcher_icons: ^0.10.0
